# CGEmu

./: .clang-format  .gitignore  CMakeLists.txt  README.md
components/inc/: test.hpp
components/src/: CMakeLists.txt  test.cpp
files/: test.6502.asm
main/inc/: Bus.hpp  cg6502.hpp
main/src/: Bus.cpp  CMakeLists.txt  cg6502.cpp  main.cpp
src/: Bus.cpp  Bus.hpp  CMakeLists.txt  TestProg  cg6502.cpp  cg6502.hpp  common.cpp  common.hpp  main.cpp
src/cg6502/: cg6502.cpp  cg6502.hpp
tests/: CMakeLists.txt  RunAllTests.cpp  cg6502Test.cpp
